<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_wallpaper"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitajte"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/welcome_log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_buttton"
        android:text="@string/welcome_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/welcome_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_buttton"
        android:text="@string/registrova"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />


</LinearLayout>