<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/log_in_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lake"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:theme="@style/Theme.Ver50.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:popupTheme="@style/Theme.Ver50.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/prihlasovacie_meno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#AB47BC"
        android:textColorHint="#AB47BC"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/heslo"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#AB47BC"
        android:textColorHint="#AB47BC"
        android:textSize="24sp"
        android:textStyle="bold">

    </EditText>


    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/prihl_si_sa"
        android:textSize="20sp"
        android:background="@drawable/rounded_buttton"
        app:backgroundTint="@color/black"
        />


</LinearLayout>