<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registracia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registracia"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:theme="@style/Theme.Ver50.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_registracia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:popupTheme="@style/Theme.Ver50.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/username_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/uzivatelske_meno"
        android:importantForAutofill="no"
        android:drawableTint="@color/white"
        android:inputType="textPersonName"
        android:labelFor="@id/username_register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/heslo"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/username_register"
        app:layout_constraintStart_toStartOf="@+id/username_register"
        app:layout_constraintTop_toBottomOf="@+id/username_register" />

    <EditText
        android:id="@+id/emailAddress_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_register"
        app:layout_constraintStart_toStartOf="@+id/password_register"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <EditText
        android:id="@+id/phone_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
        android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/mobil"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress_register"
        app:layout_constraintStart_toStartOf="@+id/emailAddress_register"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress_register" />

    <Button
        android:id="@+id/button_registracia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="60dp"
        android:text="@string/zaregistrova_sa"
        android:textStyle="bold"
        android:background="@drawable/rounded_buttton"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/phone_register"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/phone_register"
        app:layout_constraintTop_toBottomOf="@+id/phone_register" />


</LinearLayout>